// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats Renders loaded state correctly 1`] = `
<span
  id="stats-root"
>
  <div
    className="repository--section-wrapper repository--stick-to-top"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
  >
    <nav
      className="repository--nav"
    >
      <a
        href="/"
      >
        <div
          className="repository--nav--logo"
        >
          Obojobo
        </div>
      </a>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/library"
        >
          Module Library
        </a>
      </div>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/dashboard"
        >
          Dashboard
        </a>
      </div>
      <div
        className="repository--nav--current-user"
      >
        <button
          onClick={[Function]}
        >
          <div
            className="repository--nav--current-user--name"
          >
            firstName lastName
          </div>
          <div
            className="avatar repository--nav--current-user--avatar"
          >
            <div
              className="avatar--image"
            >
              <img
                alt=""
                src="/path/to/avatar"
              />
            </div>
          </div>
        </button>
        <div
          className="repository--nav--current-user--menu is-not-open"
        >
          <div
            className="repository--nav--current-user--link"
          >
            <a
              href="/profile/logout"
            >
              Log Out
            </a>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="repository--section-wrapper--full-width repository--section-wrapper--grey default-bg"
  >
    <div
      className="repository--section-wrapper--full-width-bg"
    />
    <section
      className="repository--title-banner repository--info-banner"
    >
      <h1
        className="repository--title-banner--title"
      />
    </section>
  </div>
  <div
    className="repository--section-wrapper"
  >
    <section
      className="repository--main-content"
    >
      <input
        className="repository--drafts-search"
        onChange={[Function]}
        placeholder="Search (By title or draftId)"
        value=""
      />
      <div
        className="repository--data-grid-drafts-container"
      >
        <div
          className="react-data-table-component"
          columns={
            Array [
              Object {
                "name": "Draft ID",
                "selector": "draftId",
                "sortable": true,
              },
              Object {
                "name": "Title",
                "selector": "title",
                "sortable": true,
              },
              Object {
                "name": "Created At",
                "selector": "createdAt",
                "sortable": true,
              },
              Object {
                "name": "Updated At",
                "selector": "updatedAt",
                "sortable": true,
              },
              Object {
                "name": "Latest Version",
                "selector": "latestVersion",
                "sortable": true,
              },
              Object {
                "name": "Revision Count",
                "selector": "revisionCount",
                "sortable": true,
              },
              Object {
                "cell": [Function],
                "name": "Preview",
              },
            ]
          }
          data={
            Array [
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-1",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-1",
                "updatedAt": "mock-updated-at",
              },
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-2",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-2",
                "updatedAt": "mock-updated-at",
              },
            ]
          }
          dense={true}
          keyField="draftId"
          onSelectedRowsChange={[Function]}
          pagination={true}
          paginationComponentOptions={
            Object {
              "noRowsPerPage": true,
            }
          }
          paginationPerPage={100}
          paginationRowsPerPageOptions={
            Array [
              100,
            ]
          }
          selectableRows={true}
          striped={true}
          title="Modules (2 Results)"
        >
          react-data-table-component
        </div>
      </div>
      <button
        className="repository--button "
        disabled={true}
        onClick={[Function]}
      >
        Load stats for 0 selected modules
      </button>
      <div
        className="stats"
      >
        <div
          className="repository--assessment-stats"
        >
          <div
            className="settings"
          >
            <label
              className="view-mode"
            >
              <span>
                Showing:
              </span>
              <select
                onChange={[Function]}
                value="final-assessment-scores"
              >
                <option
                  value="final-assessment-scores"
                >
                  Final Assessment Scores
                </option>
                <option
                  value="all-attempts"
                >
                  All Attempt Scores
                </option>
              </select>
            </label>
            <div
              className="filters"
            >
              <span>
                Filters:
              </span>
              <div
                className="repository--assessment-stats-filter-controls"
              >
                <div
                  className="container"
                >
                  <label>
                    <input
                      checked={false}
                      className="show-incomplete-attempts"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span>
                      Include incomplete attempt data
                    </span>
                  </label>
                  <label>
                    <input
                      checked={false}
                      className="show-preview-attempts"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span>
                      Include preview attempt data
                    </span>
                  </label>
                  <hr />
                  <label>
                    <input
                      checked={true}
                      className="show-advanced-fields"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span>
                      Include advanced fields
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="repository--assessment-stats-search-controls"
              >
                <div
                  className="search-by-text"
                >
                  <label
                    htmlFor="search-by"
                  >
                    Search by: 
                  </label>
                  <select
                    id="search-by"
                    onChange={[Function]}
                  >
                    <option
                      value=""
                    >
                      Attribute
                    </option>
                    <option
                      value="course-title"
                    >
                      Course title
                    </option>
                    <option
                      value="resource-link-title"
                    >
                      Resource link title
                    </option>
                    <option
                      value="user-first-name"
                    >
                      First name
                    </option>
                    <option
                      value="user-last-name"
                    >
                      Last name
                    </option>
                  </select>
                </div>
                <div
                  className="search-by-date"
                >
                  <label
                    htmlFor="date-range"
                  >
                    Select a date range: 
                  </label>
                  <div
                    className="date-range"
                  >
                    <input
                      onChange={[Function]}
                      type="date"
                    />
                    <input
                      onChange={[Function]}
                      type="date"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="repository--data-grid-assessments"
          >
            <div
              className="repository--data-grid-scores"
            >
              <div
                className="data-grid"
              >
                <div
                  className="react-data-table-component"
                  columns={
                    Array [
                      Object {
                        "advanced": true,
                        "name": "Course ID",
                        "selector": "contextId",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "name": "Course Title",
                        "selector": "courseTitle",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Resource Link ID",
                        "selector": "resourceLinkId",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "name": "Resource Link Title",
                        "selector": "resourceLinkTitle",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "cell": [Function],
                        "name": "URL",
                        "selector": "launchPresentationReturnUrl",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Draft ID",
                        "selector": "draftId",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Draft Content ID",
                        "selector": "draftContentId",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Module Title",
                        "selector": "moduleTitle",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Assessment ID",
                        "selector": "assessmentId",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "Username",
                        "selector": "username",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "name": "First Name",
                        "selector": "userFirstName",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "name": "Last Name",
                        "selector": "userLastName",
                        "sortable": true,
                      },
                      Object {
                        "advanced": true,
                        "name": "User Roles",
                        "selector": "userRoles",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "cell": [Function],
                        "name": "Final Assessment Score",
                        "selector": "highestAssessmentScore",
                        "sortable": true,
                      },
                      Object {
                        "advanced": false,
                        "cell": [Function],
                        "name": "Preview Mode",
                        "selector": "isPreview",
                        "sortable": true,
                      },
                    ]
                  }
                  data={Array []}
                  dense={true}
                  pagination={true}
                  paginationComponentOptions={
                    Object {
                      "noRowsPerPage": true,
                    }
                  }
                  paginationPerPage={250}
                  paginationRowsPerPageOptions={
                    Array [
                      250,
                    ]
                  }
                  striped={true}
                  title="Final Assessment Scores"
                >
                  react-data-table-component
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</span>
`;

exports[`Stats Renders loading state correctly 1`] = `
<span
  id="stats-root"
>
  <div
    className="repository--section-wrapper repository--stick-to-top"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
  >
    <nav
      className="repository--nav"
    >
      <a
        href="/"
      >
        <div
          className="repository--nav--logo"
        >
          Obojobo
        </div>
      </a>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/library"
        >
          Module Library
        </a>
      </div>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/dashboard"
        >
          Dashboard
        </a>
      </div>
      <div
        className="repository--nav--current-user"
      >
        <button
          onClick={[Function]}
        >
          <div
            className="repository--nav--current-user--name"
          >
            firstName lastName
          </div>
          <div
            className="avatar repository--nav--current-user--avatar"
          >
            <div
              className="avatar--image"
            >
              <img
                alt=""
                src="/path/to/avatar"
              />
            </div>
          </div>
        </button>
        <div
          className="repository--nav--current-user--menu is-not-open"
        >
          <div
            className="repository--nav--current-user--link"
          >
            <a
              href="/profile/logout"
            >
              Log Out
            </a>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="repository--section-wrapper--full-width repository--section-wrapper--grey default-bg"
  >
    <div
      className="repository--section-wrapper--full-width-bg"
    />
    <section
      className="repository--title-banner repository--info-banner"
    >
      <h1
        className="repository--title-banner--title"
      />
    </section>
  </div>
  <div
    className="repository--section-wrapper"
  >
    <section
      className="repository--main-content"
    >
      <input
        className="repository--drafts-search"
        onChange={[Function]}
        placeholder="Search (By title or draftId)"
        value=""
      />
      <div
        className="repository--data-grid-drafts-container"
      >
        <div
          className="react-data-table-component"
          columns={
            Array [
              Object {
                "name": "Draft ID",
                "selector": "draftId",
                "sortable": true,
              },
              Object {
                "name": "Title",
                "selector": "title",
                "sortable": true,
              },
              Object {
                "name": "Created At",
                "selector": "createdAt",
                "sortable": true,
              },
              Object {
                "name": "Updated At",
                "selector": "updatedAt",
                "sortable": true,
              },
              Object {
                "name": "Latest Version",
                "selector": "latestVersion",
                "sortable": true,
              },
              Object {
                "name": "Revision Count",
                "selector": "revisionCount",
                "sortable": true,
              },
              Object {
                "cell": [Function],
                "name": "Preview",
              },
            ]
          }
          data={
            Array [
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-1",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-1",
                "updatedAt": "mock-updated-at",
              },
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-2",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-2",
                "updatedAt": "mock-updated-at",
              },
            ]
          }
          dense={true}
          keyField="draftId"
          onSelectedRowsChange={[Function]}
          pagination={true}
          paginationComponentOptions={
            Object {
              "noRowsPerPage": true,
            }
          }
          paginationPerPage={100}
          paginationRowsPerPageOptions={
            Array [
              100,
            ]
          }
          selectableRows={true}
          striped={true}
          title="Modules (2 Results)"
        >
          react-data-table-component
        </div>
      </div>
      <button
        className="repository--button "
        disabled={true}
        onClick={[Function]}
      >
        Load stats for 0 selected modules
      </button>
      <div
        className="stats"
      >
        Loading...
      </div>
    </section>
  </div>
</span>
`;

exports[`Stats Renders non-loaded non-fetching state correctly 1`] = `
<span
  id="stats-root"
>
  <div
    className="repository--section-wrapper repository--stick-to-top"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
  >
    <nav
      className="repository--nav"
    >
      <a
        href="/"
      >
        <div
          className="repository--nav--logo"
        >
          Obojobo
        </div>
      </a>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/library"
        >
          Module Library
        </a>
      </div>
      <div
        className="repository--nav--links--link"
      >
        <a
          href="/dashboard"
        >
          Dashboard
        </a>
      </div>
      <div
        className="repository--nav--current-user"
      >
        <button
          onClick={[Function]}
        >
          <div
            className="repository--nav--current-user--name"
          >
            firstName lastName
          </div>
          <div
            className="avatar repository--nav--current-user--avatar"
          >
            <div
              className="avatar--image"
            >
              <img
                alt=""
                src="/path/to/avatar"
              />
            </div>
          </div>
        </button>
        <div
          className="repository--nav--current-user--menu is-not-open"
        >
          <div
            className="repository--nav--current-user--link"
          >
            <a
              href="/profile/logout"
            >
              Log Out
            </a>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="repository--section-wrapper--full-width repository--section-wrapper--grey default-bg"
  >
    <div
      className="repository--section-wrapper--full-width-bg"
    />
    <section
      className="repository--title-banner repository--info-banner"
    >
      <h1
        className="repository--title-banner--title"
      />
    </section>
  </div>
  <div
    className="repository--section-wrapper"
  >
    <section
      className="repository--main-content"
    >
      <input
        className="repository--drafts-search"
        onChange={[Function]}
        placeholder="Search (By title or draftId)"
        value=""
      />
      <div
        className="repository--data-grid-drafts-container"
      >
        <div
          className="react-data-table-component"
          columns={
            Array [
              Object {
                "name": "Draft ID",
                "selector": "draftId",
                "sortable": true,
              },
              Object {
                "name": "Title",
                "selector": "title",
                "sortable": true,
              },
              Object {
                "name": "Created At",
                "selector": "createdAt",
                "sortable": true,
              },
              Object {
                "name": "Updated At",
                "selector": "updatedAt",
                "sortable": true,
              },
              Object {
                "name": "Latest Version",
                "selector": "latestVersion",
                "sortable": true,
              },
              Object {
                "name": "Revision Count",
                "selector": "revisionCount",
                "sortable": true,
              },
              Object {
                "cell": [Function],
                "name": "Preview",
              },
            ]
          }
          data={
            Array [
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-1",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-1",
                "updatedAt": "mock-updated-at",
              },
              Object {
                "createdAt": "mock-created-at",
                "draftId": "mock-draft-id-2",
                "latestVersion": "mock-latest-version",
                "revisionCount": 1,
                "title": "mock-title-2",
                "updatedAt": "mock-updated-at",
              },
            ]
          }
          dense={true}
          keyField="draftId"
          onSelectedRowsChange={[Function]}
          pagination={true}
          paginationComponentOptions={
            Object {
              "noRowsPerPage": true,
            }
          }
          paginationPerPage={100}
          paginationRowsPerPageOptions={
            Array [
              100,
            ]
          }
          selectableRows={true}
          striped={true}
          title="Modules (2 Results)"
        >
          react-data-table-component
        </div>
      </div>
      <button
        className="repository--button "
        disabled={true}
        onClick={[Function]}
      >
        Load stats for 0 selected modules
      </button>
      <div
        className="stats"
      />
    </section>
  </div>
</span>
`;
